--- a/Contoso.Apps.SportsLeague/Views/Shared/_Layout.cshtml
+++ b/Contoso.Apps.SportsLeague/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                             <a href="#"><i class="fa fa-instagram"></i></a>
                         </div>
                         <div class="header-top-right">
-                            <a href="#" class="top-wrap"><span class="icon-phone">Call today: </span> (412) 555-1234</a>
+                            <a href="#" class="top-wrap"><span class="icon-phone">Call us: </span> (412) 953-1313</a>
                         </div>
                     </div>
                 </div>
