Addl AI updates

--- a/Contoso.Apps.SportsLeague/Views/Home/About.cshtml
+++ b/Contoso.Apps.SportsLeague/Views/Home/About.cshtml
@@ -17,9 +17,9 @@ automatically in just a few seconds.
 </script>
 
 @{
-    ViewBag.Title = "About";
+    ViewBag.Title = "About us";
 }
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>Contoso Sports is the premier sports equipment and clothing company in the world. Since 1989, we have delivered some of the best equipment available in the market. </p>
