Update admin site

--- a/Contoso.Apps.SportsLeague.Admin/Views/Home/Index.cshtml
+++ b/Contoso.Apps.SportsLeague.Admin/Views/Home/Index.cshtml
@@ -9,8 +9,9 @@
 </div>
 
 <div class="jumbotron">
-    <h2>Contoso Sports League Admin</h2>
-    <p class="lead">Below is a list of orders, sorted by reverse order date. You may click on an order to see its details and to obtain the generated PDF receipt.</p>
+    <h2>Contoso Sports League Admin Site v2.0</h2>
+    <p class="lead">Below is a list of orders, sorted by reverse order date. You may click on an order to see its details and to obtain the generated PDF receipt. </p>
+    <p>You can now export as Word Document, PDF, JPEG, or Azure RMS enabled.</p>
     <p><a href="@Url.Action("About", "Home")" class="btn red-btn btn-lg">Learn more &raquo;</a></p>
 </div>
 
