--- a/Contoso.Apps.SportsLeague/Views/Home/Contact.cshtml
+++ b/Contoso.Apps.SportsLeague/Views/Home/Contact.cshtml
@@ -79,7 +79,7 @@ automatically in just a few seconds.
                             <p>address:</p>
                             <div class="address-cont">
                                 <i class="fa fa-map-marker"></i>
-                                <span>7401 164th Ave NE<br />Redmond, WA 98052</span>
+                                <span>7401 164th Ave NE<br />Pittsburgh, PA 98052</span>
 
                             </div>
                         </div> <!-- End of figure address -->
