--- a/Contoso.Apps.SportsLeague/Views/Home/Index.cshtml
+++ b/Contoso.Apps.SportsLeague/Views/Home/Index.cshtml
@@ -26,7 +26,7 @@ automatically in just a few seconds.
     <div class="button-wrapper">
         <div class="container">
             <div class="row">
-                <a href="#" class="btn-content">Contoso Sports League V3</a>
+                <a href="#" class="btn-content">Contoso Sports League v3.1</a>
             </div>
             <div class="row clearfix">
                 <p><br /></p>
